samples/_failures_safe/1761317467_36ba62_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6521f8c.c: In function ‘main’:
./samples/SAFE/__tmp_e6521f8c.c:143:22: error: expected ‘)’ at end of input
  143 |     if (!process_text
      |        ~             ^
      |                      )
./samples/SAFE/__tmp_e6521f8c.c:143:5: error: expected declaration or statement at end of input
  143 |     if (!process_text
      |     ^~
